--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,4 +1,4 @@
-CFLAGS	:= -g -Wall -Wextra -DDBG_ENABLED -std=gnu99 `pkg-config fuse --cflags` 
+CFLAGS	:= -g -Wall -Wextra -DDBG_ENABLED `pkg-config fuse --cflags` 
 SRCS = $(wildcard *.c)
 HDRS = $(wildcard *.h) $(RPC_H)
 OBJS = $(addsuffix .o, $(basename $(SRCS)))
