--- a/util/Makefile
+++ b/util/Makefile
@@ -3,14 +3,11 @@ include ../Makefile.inc
 CFLAGS += -iquote ..
 LDFLAGS += -lpthread `pkg-config fuse --libs`
 
-TARGETS = skye-ls
+TARGETS =
 
 all: $(TARGETS)
 
 $(OBJS) : $(HDRS)
-
-skye-ls : skye-ls.o
-	$(CC) -o $@ $^ ../common.a $(LDFLAGS)
 
 clean :
 	rm -f $(TARGETS) $(OBJS)
