Fixed giga_index.c to link correctly.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,4 +1,5 @@
-CFLAGS	:= -g -Wall -Wextra `pkg-config fuse --cflags` 
+CFLAGS	= -g -Wall -Wextra `pkg-config fuse --cflags` 
+LDFLAGS = -lm
 SRCS = $(wildcard *.c)
 HDRS = $(wildcard *.h) $(RPC_H)
 OBJS = $(addsuffix .o, $(basename $(SRCS)))
