--- a/common/Makefile
+++ b/common/Makefile
@@ -1,7 +1,6 @@
 include ../Makefile.inc
 
 CFLAGS += -iquote ..
-LDFLAGS += `pkg-config fuse --libs`
 
 RPCGENFLAGS := -N -M
 
@@ -10,7 +9,7 @@ RPC_H = ${RPC_X}.h
 RPC_C = ${RPC_X}_svc.c ${RPC_X}_clnt.c ${RPC_X}_xdr.c
 RPC_O = $(addsuffix .o, $(basename $(RPC_C))) skye_rpc_helper.o
 
-OJBS = $(RPC_O) trace.o
+OJBS = $(RPC_O) trace.o sha.o giga_index.o
 TARGETS = ../common.a
 
 all: $(TARGETS)
