Added some benchmarks to util/

--- a/util/Makefile
+++ b/util/Makefile
@@ -3,7 +3,7 @@ include ../Makefile.inc
 CFLAGS += -iquote ..
 LDFLAGS += -lpthread `pkg-config fuse --libs`
 
-TARGETS = mdtest
+TARGETS = mdtest simul
 
 all: $(TARGETS)
 
@@ -11,6 +11,9 @@ $(OBJS) : $(HDRS)
 
 mdtest: mdtest.c
 	mpicc -Wall -DLinux -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE=1 -D__USE_LARGEFILE64=1 -g -o mdtest mdtest.c -lm
+
+simul: simul.c
+	mpicc -Wall -o simul simul.c
 
 clean :
 	rm -f $(TARGETS) $(OBJS)
