--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,4 +1,4 @@
-CFLAGS	= -g -Wall -Wextra `pkg-config fuse --cflags` -Werror
+CFLAGS	= -g -Wall -Wextra `pkg-config fuse --cflags` -Werror -D_GNU_SOURCE
 LDFLAGS = -lm
 SRCS = $(wildcard *.c)
 HDRS = $(wildcard *.h) $(RPC_H)
