--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 CFLAGS += -iquote ..
-LDFLAGS += -lpthread -lpvfs2 -lssl
+LDFLAGS += -lpthread -lpvfs2 /usr/lib/libssl.so.0.9.8
 
 TARGETS = ../skye_server
 
